# UrbanWindViz

./: .gitignore  README.md
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: dataset_registry.py  main.py  models.py
backend/app/datasources/: base.py  npy_pod_source.py
backend/app/services/: crs_transform.py  resample.py  wind_service.py
backend/app/utils/: pod_reconstruction.py
backend/tests/: test_health.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: config.ts  contract.ts  datasets.ts  health.ts  weather.ts  wind.ts
frontend/src/map/: HeatmapLayer.ts  MapView.tsx  WindLayer.ts  config.ts  windGlyph.ts
frontend/src/ui/: Controls.tsx  Footer.tsx  Time.tsx
frontend/src/util/: animation.ts  color.ts  math.ts  urlStats.ts
